<resources>
    <string name="app_name">Writers</string>
    <string name="sign_in">Sign In</string>
    <string name="name">Name</string>
    <string name="pages">Pages</string>
    <string name="skip_to_timer">Skip to timer</string>
    <string name="start">Start</string>
    <string name="break_up_groups">Break Up Groups</string>
    <string name="clear_names">Clear Names</string>
    <string name="delete_single">Delete Single</string>
    <string name="sign_in_list">Sign in list</string>
    <string name="timer">Timer</string>
    <string name="num_pages">25</string>
    <string name="todo">TODO</string>
    <string name="shuffle">Shuffle</string>
    <string name="delete_selection">Delete Selection</string>
    <string name="btn_new">New</string>

</resources>
