<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:orientation="vertical"
    android:visibility="visible"
    android:weightSum="1"
    tools:context="com.cbrant.writers.MainActivity"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="0dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="1"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/nameField"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/name"
                android:inputType="textPersonName"
                android:lines="1"
                android:maxLength="15"
                android:maxLines="1"
                tools:layout_conversion_absoluteHeight="77dp"
                tools:layout_conversion_absoluteWidth="260dp"
                tools:layout_conversion_absoluteX="0dp"
                tools:layout_conversion_absoluteY="0dp"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="0dp" />

            <EditText
                android:id="@+id/pageField"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/pages"
                android:inputType="number"
                app:layout_constraintRight_toRightOf="parent"
                tools:layout_conversion_absoluteHeight="77dp"
                tools:layout_conversion_absoluteWidth="124dp"
                tools:layout_conversion_absoluteX="260dp"
                tools:layout_conversion_absoluteY="0dp"
                tools:layout_editor_absoluteY="8dp" />

        </LinearLayout>

        <Button
            android:id="@+id/btnSignin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorControlActivated"
            android:onClick="signIn"
            android:text="@string/sign_in"
            android:textAllCaps="false"
            tools:layout_conversion_absoluteHeight="98dp"
            tools:layout_conversion_absoluteWidth="384dp"
            tools:layout_conversion_absoluteX="0dp"
            tools:layout_conversion_absoluteY="77dp"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="77dp" />

        <TextView
            android:id="@+id/lblSignIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_in_list" />

        <ListView
            android:id="@+id/signInList"
            style="@style/Widget.AppCompat.ListView.Menu"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:fadingEdge="horizontal|vertical" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/btnStart"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="navigateToGroupSort"
                android:text="@string/break_up_groups"
                android:textAllCaps="false"
                tools:layout_conversion_absoluteHeight="48dp"
                tools:layout_conversion_absoluteWidth="384dp"
                tools:layout_conversion_absoluteX="0dp"
                tools:layout_conversion_absoluteY="432dp"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="432dp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="25dp" />

            <Button
                android:id="@+id/btnSkip"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="navigateToTimer"
                android:text="@string/timer"
                android:textAllCaps="false"
                tools:layout_conversion_absoluteHeight="48dp"
                tools:layout_conversion_absoluteWidth="384dp"
                tools:layout_conversion_absoluteX="0dp"
                tools:layout_conversion_absoluteY="528dp"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="528dp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="25dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnDelete"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="removeSingleEntry"
                    android:text="@string/delete_single"
                    android:textAllCaps="false" />

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <Button
                    android:id="@+id/btnClear"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="clearDatabase"
                    android:text="@string/clear_names"
                    android:textAllCaps="false"
                    tools:layout_conversion_absoluteHeight="48dp"
                    tools:layout_conversion_absoluteWidth="384dp"
                    tools:layout_conversion_absoluteX="0dp"
                    tools:layout_conversion_absoluteY="480dp"
                    tools:layout_editor_absoluteX="0dp"
                    tools:layout_editor_absoluteY="480dp" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>


</RelativeLayout>
